编写 DecoderBase 以及 Player相关文件框架

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -9,14 +9,14 @@ set(libname ffmpeg-lib)
 include_directories(
         include
         glm
-#        common
-#        ${CMAKE_SOURCE_DIR}/recorder
-#        ${CMAKE_SOURCE_DIR}/util
-#        ${CMAKE_SOURCE_DIR}/player
-#        ${CMAKE_SOURCE_DIR}/player/decoder
-#        ${CMAKE_SOURCE_DIR}/player/render
-#        ${CMAKE_SOURCE_DIR}/player/render/audio
-#        ${CMAKE_SOURCE_DIR}/player/render/video
+        common
+        ${CMAKE_SOURCE_DIR}/recorder
+        ${CMAKE_SOURCE_DIR}/util
+        ${CMAKE_SOURCE_DIR}/player
+        ${CMAKE_SOURCE_DIR}/player/decoder
+        ${CMAKE_SOURCE_DIR}/player/render
+        ${CMAKE_SOURCE_DIR}/player/render/audio
+        ${CMAKE_SOURCE_DIR}/player/render/video
 )
 
 link_directories(
@@ -25,6 +25,17 @@ link_directories(
 
 file(GLOB src-files
         ${CMAKE_SOURCE_DIR}/*.cpp
+        ${CMAKE_SOURCE_DIR}/util/*.cpp
+        ${CMAKE_SOURCE_DIR}/common/*.cpp
+        ${CMAKE_SOURCE_DIR}/player/*.cpp
+        ${CMAKE_SOURCE_DIR}/player/decoder/*.cpp
+        ${CMAKE_SOURCE_DIR}/player/render/video/*.cpp
+        ${CMAKE_SOURCE_DIR}/player/render/audio/*.cpp
+        ${CMAKE_SOURCE_DIR}/recorder/SingleVideoRecorder.cpp
+        ${CMAKE_SOURCE_DIR}/recorder/SingleAudioRecorder.cpp
+        ${CMAKE_SOURCE_DIR}/recorder/MediaRecorderContext.cpp
+        ${CMAKE_SOURCE_DIR}/recorder/GLCameraRender.cpp
+        ${CMAKE_SOURCE_DIR}/recorder/MediaRecorder.cpp
 )
 
 add_library( # Sets the name of the library.
