--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
             v2SigningEnabled true
         }
         debug {
-            storeFile file('/home/lyhao/MyStudy/XVideoPlayer/mykeystore.jks')
+            storeFile file('../mykeystore.jks')
             storePassword '123456'
             keyAlias 'alias'
             keyPassword 'alias123'
@@ -56,6 +56,11 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
